--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -5,6 +5,7 @@
       <li><strong><%= book.movie.title %></strong></li>
       <br>
       <p><%= book.movie.overview %></p>
+      <p> <i>"<%= book.comment %>"</i> </p>
       <%= link_to "delete this bookmark", bookmark_path(book), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this list?" } %>
     <% end %>
   </ul>
