--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -10,6 +10,11 @@
       <% end %>
     </ol>
   </div>
+<div>
+<%= cl_image_tag("yetfxvm1lori8bpokzmr",
+      width: 400, height: 300, crop: :fill) %>
+</div>
+
   <div>
     <%= link_to "Create a new list", new_list_path  %>
   </div>
